--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
 		"@types/react": "^18.0.17",
 		"@types/react-dom": "^18.0.6",
 		"@types/styled-components": "^5.1.25",
+		"auto": "^11.2.1",
 		"babel-loader": "^8.2.5",
 		"husky": "^8.0.1",
 		"react": "^18.2.0",
