--- a/package.json
+++ b/package.json
@@ -36,16 +36,16 @@
 		"singleQuote": true,
 		"trailingComma": "es5"
 	},
-	"name": "alurabooks-ds",
+	"name": "alurabooks-raonirocha",
 	"author": "raonirocha",
-	"module": "dist/alurabooks-ds.esm.js",
+	"module": "dist/alurabooks-raonirocha.esm.js",
 	"size-limit": [
 		{
-			"path": "dist/alurabooks-ds.cjs.production.min.js",
+			"path": "dist/alurabooks-raonirocha.cjs.production.min.js",
 			"limit": "10 KB"
 		},
 		{
-			"path": "dist/alurabooks-ds.esm.js",
+			"path": "dist/alurabooks-raonirocha.esm.js",
 			"limit": "10 KB"
 		}
 	],
